--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,7 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import '../styles/global.css';
+
 const pageTitle = "About Me";  
 
 const identity = {
@@ -37,9 +40,7 @@ const fontWeight = "bold";
     </style>
 	</head>
 	<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
 		
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
