--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -12,7 +13,9 @@ import Navigation from '../components/Navigation.astro';
 	</head>
 	<body>
 		<Navigation />
-		
+
 		<h1>My Astro Site</h1>
+		
+		<Footer />
 	</body>
 </html>
