--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,9 @@
 ---
+import Hamburger from './Hamburger.astro';
 ---
 <header>
   <nav>
+    <Hamburger />
     <div class="nav-links">
       <a href="/">Home</a>
       <a href="/about/">About</a>
