--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "About Me";  
 
 const identity = {
@@ -22,27 +19,8 @@ const skillColor = "navy";
 const fontWeight = "bold";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-    <style define:vars={{skillColor, fontWeight}}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-      }
-    </style>
-	</head>
-	<body>
-    <Navigation />
-		
+
+<BaseLayout pageTitle={pageTitle}>
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
@@ -68,7 +46,4 @@ const fontWeight = "bold";
 
     {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 
-    <Footer />
-</body>
-	</body>
-</html>
+</BaseLayout>
