--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,6 +8,7 @@ import Hamburger from './Hamburger.astro';
       <a href="/">Home</a>
       <a href="/about/">About</a>
       <a href="/blog/">Blog</a>
+      <a href="/tags/">Tags</a>
     </div>
   </nav>
 </header>
