introduce preact and theme button

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,11 @@
 ---
+import ThemeIcon from './ThemeIcon.astro';
 import Hamburger from './Hamburger.astro';
 ---
 <header>
   <nav>
     <Hamburger />
+    <ThemeIcon />
     <div class="nav-links">
       <a href="/">Home</a>
       <a href="/about/">About</a>
