--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Greeting from '../components/Greeting.jsx';
+import Counter from '../components/Counter.vue';
 const pageTitle = "Home Page";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <h2>My awesome blog subtitle</h2>
 	<Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+  <Counter client:load/>
 </BaseLayout>
